--- a/css/buscarInput.css
+++ b/css/buscarInput.css
@@ -7,11 +7,11 @@
         .container-2 input#search{
   width: 50px;
   height: 50px;
-  background: #B5B3B3;
+  background: #003232;
   border: none;
   font-size: 15pt;
   float: left;
-  color: #B5B3B3;
+  color: #003232;
   padding-left: 35px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
