--- a/css/main.css
+++ b/css/main.css
@@ -13791,12 +13791,9 @@ be a descendant of the grid when it is being dragged.
   background-color: #222d32;
   -webkit-box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
-  -webkit-transition: left 0.3s ease,
- width 0.3s ease;
-  -o-transition: left 0.3s ease,
- width 0.3s ease;
-  transition: left 0.3s ease,
- width 0.3s ease;
+  -webkit-transition: left 0.3s ease, width 0.3s ease;
+  -o-transition: left 0.3s ease, width 0.3s ease;
+  transition: left 0.3s ease, width 0.3s ease;
 }
 
 .app-sidebar::-webkit-scrollbar {
@@ -13873,12 +13870,9 @@ be a descendant of the grid when it is being dragged.
   padding: 12px 15px;
   font-size: 1.08em;
   border-left: 3px solid transparent;
-  -webkit-transition: border-left-color 0.3s ease,
- background-color 0.3s ease;
-  -o-transition: border-left-color 0.3s ease,
- background-color 0.3s ease;
-  transition: border-left-color 0.3s ease,
- background-color 0.3s ease;
+  -webkit-transition: border-left-color 0.3s ease, background-color 0.3s ease;
+  -o-transition: border-left-color 0.3s ease, background-color 0.3s ease;
+  transition: border-left-color 0.3s ease, background-color 0.3s ease;
   color: #fff;
 }
 
@@ -15233,35 +15227,4 @@ be a descendant of the grid when it is being dragged.
 
 .user .user-settings label {
   color: #666;
-}
-
-
-
-
-li {list-style-type: none;
-font-size: 16pt;
-}
-.mail {
-margin: auto;
-padding-top: 10px;
-padding-bottom: 10px;
-width: 400px;
-background : #D8F1F8;
-border: 1px soild silver;
-}
-.mail h2 {
-margin-left: 38px;
-}
-input {
-font-size: 20pt;
-}
-input:focus, textarea:focus{
-background-color: lightyellow;
-}
-input submit {
-font-size: 12pt;
-}
-.rq {
-color: #FF0000;
-font-size: 10pt;
 }
